	- Switched back to Algorithm::Diff::XS
	- Added secondary ordering on title on releases listing on VN page
	- Added i+/c+ ID recognition to VN search
	- JS: Don't consider 256x384 a "bad" screenshot resolution
	- Changed location of 'add character/release' links on VN page
	- Use generic imgurl() and imgpath() functions to generate image URLs/paths
	- Bugfix: Properly make i+ IDs linkable in bb2html()
	- Bugfix: Make sure the user dropdown boxes work on /v+/chars
	- Bugfix: dbTraitGet() filtering would not always work correctly
	- Bugfix: Don't allow duplicate trait names/aliasses within the same group
	- Bugfix: Don't throw error when adding character to VN without releases
	- Bugfix: Keep image id on failed (vn|char)add + validate image id
	- Bugfix: Don't display "group number" field on trait creation for non-mods

2.20 - 2011-05-01
	- Added support for sponsored links on VN pages
	- Order the VNs listed on char browser by release date
	- Order the traits groups on /i by their 'order' column
	- Use same browsing-table on trait pages and char browser
	- Added spoiler warning to character revision pages
	- Generate dbedit/dbdel notifications on character edits
	- CSS: Hide links in [spoiler] tags
	- Added 'select' all to wishlist and moved 'select all' down on notifies
	- Added char/tag/trait stats to database statistics box
	- Update traits_chars cache daily using Multi::Maintenance
	- Toggle [spoiler] tag visibility with global setting rather than mouse-over
	- Added "Add character" link to VN pages
	- Added "Image ID" field to VN image uploader
	- Added "All except characters" filter to history browser
	- Cleaned up CSS code
	- Cleaned up permissions
	- Replaced user ranks with a permission system
	- Bugfix: don't accidentally remove char traits when editing
	- Bugfix: fixed possible SQL table name clash on history browser
	- Bugfix: properly announce chars and traits in Multi::IRC
	- Bugfix: display more than 10 characters on VN page